RWD: consolidating app/design/frontend/rwd/default/template/review/product/view/list.phtml into app/design/frontend/base/default/template/review/product/view/list.phtml

--- a/app/design/frontend/base/default/template/review/product/view/list.phtml
+++ b/app/design/frontend/base/default/template/review/product/view/list.phtml
@@ -5,35 +5,42 @@
  * @category    design
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
- * @copyright   Copyright (c) 2021-2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2021-2023 The OpenMage Contributors (https://openmage.org)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
 
-<?php $_items = $this->getReviewsCollection()->getItems();?>
+<?php $_items = $this->getReviewsCollection()->getItems() ?>
 <div class="box-collateral box-reviews" id="customer-reviews">
     <?php if (count($_items)):?>
-        <h2><?= $this->__('Customer Reviews') ?></h2>
-        <?= $this->getChildHtml('toolbar') ?>
         <dl>
         <?php foreach ($_items as $_review):?>
+            <?php $_votes = $_review->getRatingVotes() ?>
             <dt>
-                <a href="<?= $this->getReviewUrl($_review->getId()) ?>"><?= $this->escapeHtml($_review->getTitle()) ?></a> <?= $this->__('Review by <span>%s</span>', $this->escapeHtml($_review->getNickname())) ?>
+                <?= $this->escapeHtml($_review->getNickname()) ?> -
+                <em><?= $this->formatDate($_review->getCreatedAt()) ?></em>
             </dt>
             <dd>
-                <?php $_votes = $_review->getRatingVotes(); ?>
-                <?php if (count($_votes)): ?>
+                <?php if (count($_votes) == 1): ?>
+                    <?php foreach ($_votes as $_vote): ?>
+                        <div class="rating-box">
+                            <div class="rating" style="width:<?= $_vote->getPercent() ?>%"></div>
+                        </div>
+                    <?php endforeach ?>
+                <?php endif ?>
+                <strong><?= $this->escapeHtml(ucfirst($_review->getTitle())) ?></strong><br />
+                <?= nl2br($this->escapeHtml(ucfirst($_review->getDetail()))) ?>
+
+                <?php if (count($_votes) > 1): ?>
                 <table class="ratings-table">
-                    <col width="1" />
-                    <col />
                     <tbody>
                         <?php foreach ($_votes as $_vote): ?>
                         <tr>
                             <th><?= $this->escapeHtml($_vote->getRatingCode()) ?></th>
                             <td>
                                 <div class="rating-box">
-                                    <div class="rating" style="width:<?= $_vote->getPercent() ?>%;"></div>
+                                    <div class="rating" style="width:<?= $_vote->getPercent() ?>%"></div>
                                 </div>
                             </td>
                         </tr>
@@ -41,12 +48,11 @@
                     </tbody>
                 </table>
                 <?php endif ?>
-                <?= nl2br($this->escapeHtml($_review->getDetail())) ?>
-                <small class="date"><?= $this->__('(Posted on %s)', $this->formatDate($_review->getCreatedAt()), 'long') ?></small>
             </dd>
         <?php endforeach ?>
         </dl>
-        <?= $this->getChildHtml('toolbar') ?>
+    <?php elseif($this->getParentBlock()): ?>
+        <?= $this->getParentBlock()->getReviewsSummaryHtml($this->getProduct(), 'short', true) ?>
     <?php endif ?>
     <?= $this->getChildHtml('review_form') ?>
 </div>
