--- a/app/design/frontend/base/default/template/review/helper/summary.phtml
+++ b/app/design/frontend/base/default/template/review/helper/summary.phtml
@@ -20,7 +20,7 @@
             </div>
         <?php endif ?>
         <p class="rating-links">
-            <a href="<?= $this->getReviewsUrl() ?>"><?= $this->__('%d Review(s)', $this->getReviewsCount()) ?></a>
+            <a href=""><?= $this->__('%d Review(s)', $this->getReviewsCount()) ?></a>
             <span class="separator">|</span>
             <a href="<?= $this->getReviewsUrl() ?>#review-form"><?= $this->__('Add Your Review') ?></a>
         </p>
