--- a/app/design/frontend/base/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/media.phtml
@@ -6,7 +6,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -15,14 +15,17 @@
 <?php
 $_product = $this->getProduct();
 $_helper = $this->helper('catalog/output');
+$catalogImageHelper = $this->helper('catalog/image');
+$mainImage = $this->helper('catalog/image')->init($_product, 'image');
 ?>
     <div class="product-image product-image-zoom">
         <div class="product-image-gallery">
             <img id="image-main"
-                 class="gallery-image visible"
-                 src="<?= $this->helper('catalog/image')->init($_product, 'image') ?>"
-                 alt="<?= $this->escapeHtml($this->getImageLabel()) ?>"
-                 title="<?= $this->escapeHtml($this->getImageLabel()) ?>" />
+                class="gallery-image visible"
+                src="<?= $mainImage ?>"
+                alt="<?= $this->escapeHtml($this->getImageLabel()) ?>"
+                title="<?= $this->escapeHtml($this->getImageLabel()) ?>"
+                width="<?= $mainImage->getOriginalWidth() ?>" height="<?= $mainImage->getOriginalHeight() ?>" />
 
             <?php $i=0; foreach ($this->getGalleryImages() as $_image): ?>
                 <?php if ($this->isGalleryImageVisible($_image)): ?>
